2010-11-05  Zachary T Welch <zwelch@codesourcery,com>

	* testsuite/: Convert to autotools and add to distribution.
	  Update test files to allow out-of-tree builds.
	* configure.ac: Add maintainer mode, create Makefiles in
	  testsuite/ tree, improve --with-libunwind configuration
	  to accept non-standard install path.
	* Makefile.am: Don't distribute autogen.sh and .gitignore.
	  Remove config.h.in during 'make maintainer-clean'
	* .gitignore: Exclude test suite build/run artifacts.

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* common.h: Add arch_ptr to callstack_element
	* handle_event.c: Move callstack manipulation so that it's around
	the output calls--push before output_left, pop after output_right.
	(callstack_pop): Free the arch_ptr if it was set.
	* sysdeps/linux-gnu/x86_64/ptrace.h: Split the archdep struct to
	the proc part and the callstack_element part.
	* sysdeps/linux-gnu/x86_64/trace.c (save_register_args): Init
	callstack_element.arch_ptr.
	(gimme_arg): Use it.

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* testsuite/ltrace.main/parameters.* (func_work, func_call): new
	functions for testing nested library calls

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* sysdeps/linux-gnu/x86_64/trace.c: Fix passing and returning
	float and double values.
	* sysdeps/linux-gnu/x86_64/ptrace.h: Likewise.

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* testsuite/ltrace.main/parameters.* (func_float): now returns
	float to test proper decoding of float return values.
	(func_double): new function similar to func_float.

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* configure.ac: Don't assume that libelf comes with a .pc file.

2010-11-01  Petr Machata  <pmachata@redhat.com>

	* configure.ac: ${host_cpu} for PPC64 is "powerpc64".

2010-10-31  Joe Damato <ice799@gmail.com>

	* Makefile.am: Add autotool support for libunwind.
	* configure.ac: Ditto.
	* common.h: New structure fields for libunwind.