@@ -1,9 +1,14 @@
 #include <sys/ptrace.h>
 #include <sys/ucontext.h>
+
+#ifdef __powerpc64__
+#define GET_FPREG(RS, R) ((RS)[R])
+#else
+#define GET_FPREG(RS, R) ((RS).fpregs[R])
+#endif
+
 typedef struct {
   int valid;
-  unsigned long func_args[6];
-  unsigned long sysc_args[6];
   gregset_t regs;
   fpregset_t fpregs;
   gregset_t regs_copy;
